copy/paste added

--- a/tasks.json
+++ b/tasks.json
@@ -22,7 +22,7 @@
  {
         "ID": 5,
         "Title": "Copy/Paste Obviously ,I didn't forget",
-        "Completed": false
+        "Completed": true
     }
  {
         "ID": 6,
